[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/level_three.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tiles/test_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://Prefabs/TowerHandler.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/PowerUpSpawner.gd" type="Script" id=4]
[ext_resource path="res://Scripts/enemy_nav_mover.gd" type="Script" id=5]
[ext_resource path="res://Scripts/enemy_nav_spawner.gd" type="Script" id=6]
[ext_resource path="res://Assets/Comfortaa-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Scrap.png" type="Texture" id=8]
[ext_resource path="res://Scripts/gold.gd" type="Script" id=9]
[ext_resource path="res://Assets/Towers/cannon2.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Build.gd" type="Script" id=11]
[ext_resource path="res://Assets/Towers/crossy.png" type="Texture" id=12]
[ext_resource path="res://Assets/Towers/cannon1.png" type="Texture" id=13]
[ext_resource path="res://Scripts/scrapboxes.gd" type="Script" id=14]
[ext_resource path="res://Prefabs/scrapbox_three.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/flying_help_text.gd" type="Script" id=16]
[ext_resource path="res://Prefabs/NPC_women.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scripts/time_machine.gd" type="Script" id=18]
[ext_resource path="res://Assets/ufoYellow.png" type="Texture" id=19]
[ext_resource path="res://Scripts/PSpawn.gd" type="Script" id=20]

[sub_resource type="DynamicFont" id=1]
size = 27
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 27
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 27
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 55.46, 58.98 )

[sub_resource type="CircleShape2D" id=6]
radius = 40.0

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 931.14, 300.253, 0, 0, 0, 0, 900.762, 179.788, 0, 0, 0, 0, 766.679, 102.271, 0, 0, 0, 0, 452.422, 94.9387 )
}

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="NavNode" type="Navigation2D" parent="."]

[node name="TileMap" type="TileMap" parent="NavNode"]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 84, 84 )
collision_layer = 514
collision_mask = 514
format = 1
tile_data = PoolIntArray( 0, 15, 0, 1, 1610612758, 0, 2, 1610612758, 0, 3, 1610612757, 0, 4, 1610612758, 0, 5, 1610612757, 0, 6, 1610612758, 0, 7, 1610612758, 0, 8, 1610612758, 0, 9, 1610612757, 0, 10, 1610612757, 0, 11, 1610612757, 0, 12, 1610612757, 0, 13, 1610612757, 0, 14, 1610612758, 0, 15, 1610612758, 0, 16, 1610612758, 0, 17, 1610612758, 0, 18, 1610612757, 0, 19, 1610612757, 0, 20, -1610612721, 0, 21, -1610612717, 0, 22, -1610612718, 0, 23, -1610612718, 0, 24, -1610612717, 0, 65536, -1610612714, 0, 65537, 16, 0, 65538, 16, 0, 65539, 16, 0, 65540, 16, 0, 65541, 16, 0, 65542, 16, 0, 65543, 16, 0, 65544, 16, 0, 65545, 16, 0, 65546, 16, 0, 65547, 16, 0, 65548, 16, 0, 65549, 16, 0, 65550, 16, 0, 65551, 16, 0, 65552, 16, 0, 65553, 16, 0, 65554, 16, 0, 65555, 16, 0, 65556, -1073741803, 0, 65557, -1610612718, 0, 65558, -1610612717, 0, 65559, -1610612717, 0, 65560, -1610612717, 0, 131072, -1610612715, 0, 131073, 16, 0, 131074, 16, 0, 131075, 16, 0, 131076, 16, 0, 131077, 16, 0, 131078, 16, 0, 131079, 16, 0, 131080, 16, 0, 131081, 16, 0, 131082, 16, 0, 131083, 16, 0, 131084, 16, 0, 131085, 16, 0, 131086, 16, 0, 131087, 16, 0, 131088, 16, 0, 131089, 16, 0, 131090, 16, 0, 131091, 16, 0, 131092, -1073741804, 0, 131093, 1610612757, 0, 131094, 1610612757, 0, 131095, -1610612721, 0, 131096, -1610612718, 0, 196608, -1610612714, 0, 196609, 16, 0, 196610, 16, 0, 196611, 20, 0, 196612, 21, 0, 196613, 21, 0, 196614, 21, 0, 196615, 21, 0, 196616, 21, 0, 196617, 21, 0, 196618, -1610612716, 0, 196619, 16, 0, 196620, 16, 0, 196621, 20, 0, 196622, 21, 0, 196623, 21, 0, 196624, 21, 0, 196625, -1610612716, 0, 196626, 16, 0, 196627, 16, 0, 196628, 16, 0, 196629, 16, 0, 196630, 16, 0, 196631, -1073741802, 0, 196632, -1610612718, 0, 262144, 1610612756, 0, 262145, 16, 0, 262146, 16, 0, 262147, -1073741803, 0, 262148, -1610612718, 0, 262149, -1610612717, 0, 262150, -1610612717, 0, 262151, -1610612717, 0, 262152, -1610612717, 0, 262153, -1610612718, 0, 262154, -1610612715, 0, 262155, 16, 0, 262156, 16, 0, 262157, -1073741803, 0, 262158, -1610612718, 0, 262159, -1610612718, 0, 262160, -1610612718, 0, 262161, -1610612715, 0, 262162, 16, 0, 262163, 16, 0, 262164, 16, 0, 262165, 16, 0, 262166, 16, 0, 262167, -1073741803, 0, 262168, -1610612718, 0, 327680, 16, 0, 327681, 16, 0, 327682, 16, 0, 327683, -1073741803, 0, 327684, -1610612717, 0, 327685, -1610612718, 0, 327686, -1610612718, 0, 327687, -1610612718, 0, 327688, -1610612717, 0, 327689, -1610612718, 0, 327690, -1610612715, 0, 327691, 16, 0, 327692, 16, 0, 327693, -1073741803, 0, 327694, -1610612718, 0, 327695, -1610612717, 0, 327696, -1610612717, 0, 327697, -1073741809, 0, 327698, 21, 0, 327699, 22, 0, 327700, -1610612716, 0, 327701, 16, 0, 327702, 16, 0, 327703, -1073741802, 0, 327704, -1610612717, 0, 393216, 16, 0, 393217, 16, 0, 393218, 16, 0, 393219, -1073741803, 0, 393220, -1610612718, 0, 393221, -1610612717, 0, 393222, -1610612717, 0, 393223, 15, 0, 393224, 1610612757, 0, 393225, 1610612757, 0, 393226, 1610612756, 0, 393227, 16, 0, 393228, 16, 0, 393229, -1073741804, 0, 393230, 1610612757, 0, 393231, 1610612757, 0, 393232, 1610612757, 0, 393233, 1610612758, 0, 393234, 1610612757, 0, 393235, 1610612757, 0, 393236, 1610612756, 0, 393237, 16, 0, 393238, 16, 0, 393239, -1073741803, 0, 393240, -1610612717, 0, 458752, -1610612716, 0, 458753, 16, 0, 458754, 16, 0, 458755, -1073741803, 0, 458756, -1610612718, 0, 458757, -1610612717, 0, 458758, -1610612718, 0, 458759, -1610612715, 0, 458760, 16, 0, 458761, 16, 0, 458762, 16, 0, 458763, 16, 0, 458764, 16, 0, 458765, 16, 0, 458766, 16, 0, 458767, 16, 0, 458768, 16, 0, 458769, 16, 0, 458770, 16, 0, 458771, 16, 0, 458772, 16, 0, 458773, 16, 0, 458774, 16, 0, 458775, -1073741803, 0, 458776, -1610612717, 0, 524288, -1610612715, 0, 524289, 16, 0, 524290, 16, 0, 524291, -1073741803, 0, 524292, -1610612717, 0, 524293, -1610612717, 0, 524294, -1610612718, 0, 524295, -1610612715, 0, 524296, 16, 0, 524297, 16, 0, 524298, 16, 0, 524299, 16, 0, 524300, 16, 0, 524301, 16, 0, 524302, 16, 0, 524303, 16, 0, 524304, 16, 0, 524305, 16, 0, 524306, 16, 0, 524307, 16, 0, 524308, 16, 0, 524309, 16, 0, 524310, 16, 0, 524311, -1073741804, 0, 524312, 1610612757, 0, 589824, -1610612714, 0, 589825, 16, 0, 589826, 16, 0, 589827, -1073741803, 0, 589828, -1610612718, 0, 589829, -1610612718, 0, 589830, -1610612718, 0, 589831, -1610612715, 0, 589832, 16, 0, 589833, 16, 0, 589834, 20, 0, 589835, 21, 0, 589836, 21, 0, 589837, 21, 0, 589838, 21, 0, 589839, 21, 0, 589840, 21, 0, 589841, 21, 0, 589842, 21, 0, 589843, 21, 0, 589844, -1610612716, 0, 589845, 16, 0, 589846, 16, 0, 589847, 16, 0, 589848, 16, 0, 655360, -1610612714, 0, 655361, 16, 0, 655362, 16, 0, 655363, -1073741804, 0, 655364, 1610612757, 0, 655365, 1610612757, 0, 655366, 1610612757, 0, 655367, 1610612756, 0, 655368, 16, 0, 655369, 16, 0, 655370, -1073741803, 0, 655371, -1610612718, 0, 655372, -1610612718, 0, 655373, -1610612718, 0, 655374, -1610612718, 0, 655375, -1610612717, 0, 655376, -1610612717, 0, 655377, -1610612718, 0, 655378, -1610612718, 0, 655379, -1610612718, 0, 655380, -1610612714, 0, 655381, 16, 0, 655382, 16, 0, 655383, 16, 0, 655384, 16, 0, 720896, -1610612715, 0, 720897, 16, 0, 720898, 16, 0, 720899, 16, 0, 720900, 16, 0, 720901, 16, 0, 720902, 16, 0, 720903, 16, 0, 720904, 16, 0, 720905, 16, 0, 720906, -1073741802, 0, 720907, -1610612718, 0, 720908, -1610612717, 0, 720909, -1610612717, 0, 720910, -1610612718, 0, 720911, -1610612717, 0, 720912, -1610612717, 0, 720913, -1610612717, 0, 720914, 18, 0, 720915, 18, 0, 720916, -1073741809, 0, 720917, 21, 0, 720918, 21, 0, 720919, 21, 0, 720920, 21, 0, 786432, -1610612715, 0, 786433, 16, 0, 786434, 16, 0, 786435, 16, 0, 786436, 16, 0, 786437, 16, 0, 786438, 16, 0, 786439, 16, 0, 786440, 16, 0, 786441, 16, 0, 786442, -1073741803, 0, 786443, -1610612718, 0, 786444, -1610612718, 0, 786445, -1610612717, 0, 786446, -1610612718, 0, 786447, -1610612718, 0, 851968, -1073741809, 0, 851969, 22, 0, 851970, 22, 0, 851971, 22, 0, 851972, 21, 0, 851973, 21, 0, 851974, 22, 0, 851975, 22, 0, 851976, 21, 0, 851977, 21, 0, 851978, 1610612751, 0, 851979, -1610612718, 0, 851980, -1610612718, 0, 851981, -1610612718, 0, 851982, -1610612718, 0, 851983, -1610612718, 0, 917504, 1610612754, 0, 917505, 1610612754, 0, 917506, 1610612754, 0, 917507, 1610612754, 0, 917508, 1610612754, 0, 917509, 1610612754, 0, 917510, 1610612754, 0, 917511, 1610612754, 0, 917512, 1610612754, 0, 917513, 1610612754, 0, 917514, 1610612754, 0, 917515, 1610612754, 0, 917516, 1610612754, 0, 917517, 1610612754, 0, 917518, 1610612754, 0, 917519, 1610612754, 0 )

[node name="TowerHandler" parent="." instance=ExtResource( 3 )]

[node name="PowerUpSpawner" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Enemies" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 5 )

[node name="Spawners" type="Node" parent="Enemies"]

[node name="Spawner" type="Node2D" parent="Enemies/Spawners"]
position = Vector2( 15.134, 239.165 )
script = ExtResource( 6 )

[node name="UI" type="Node" parent="."]

[node name="Label" type="Label" parent="UI"]
margin_left = 930.016
margin_top = 565.343
margin_right = 1015.02
margin_bottom = 596.343
custom_fonts/font = SubResource( 1 )
text = "Scrap"

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
margin_left = 838.673
margin_top = 505.86
margin_right = 1033.67
margin_bottom = 589.86

[node name="TextureRect" type="TextureRect" parent="UI/HBoxContainer"]
margin_right = 84.0
margin_bottom = 84.0
texture = ExtResource( 8 )

[node name="ResourceLabel" type="Label" parent="UI/HBoxContainer"]
margin_left = 88.0
margin_top = 19.0
margin_right = 173.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "1000"
align = 2
script = ExtResource( 9 )

[node name="ResouceContainer" type="VBoxContainer" parent="UI"]
margin_left = 861.425
margin_top = 514.961
margin_right = 1134.43
margin_bottom = 642.961
rect_scale = Vector2( 0.5, 0.5 )

[node name="VBoxContainer2" type="VBoxContainer" parent="UI"]
margin_left = 791.168
margin_top = 516.882
margin_right = 900.168
margin_bottom = 646.881
rect_scale = Vector2( 0.5, 0.5 )

[node name="TextureButton" type="TextureButton" parent="UI/VBoxContainer2"]
margin_right = 109.0
margin_bottom = 84.0
texture_normal = ExtResource( 10 )
script = ExtResource( 11 )

[node name="Label" type="Label" parent="UI/VBoxContainer2"]
margin_top = 88.0
margin_right = 109.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 3 )
text = "Buster"

[node name="Label2" type="Label" parent="UI/VBoxContainer2"]
margin_top = 123.0
margin_right = 109.0
margin_bottom = 154.0
custom_fonts/font = SubResource( 4 )
text = "30"
align = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="UI"]
margin_left = 736.251
margin_top = 517.342
margin_right = 845.251
margin_bottom = 705.342
rect_scale = Vector2( 0.5, 0.5 )

[node name="TextureButton" type="TextureButton" parent="UI/VBoxContainer3"]
margin_right = 109.0
margin_bottom = 84.0
texture_normal = ExtResource( 12 )
script = ExtResource( 11 )

[node name="Label" type="Label" parent="UI/VBoxContainer3"]
margin_top = 88.0
margin_right = 109.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 3 )
text = "Crossy"

[node name="Label2" type="Label" parent="UI/VBoxContainer3"]
margin_top = 123.0
margin_right = 109.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 4 )
text = "20
"
align = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="UI"]
margin_left = 675.135
margin_top = 516.874
margin_right = 784.135
margin_bottom = 646.873
rect_scale = Vector2( 0.5, 0.5 )

[node name="TextureButton" type="TextureButton" parent="UI/VBoxContainer4"]
margin_right = 111.0
margin_bottom = 84.0
texture_normal = ExtResource( 13 )
script = ExtResource( 11 )

[node name="Label" type="Label" parent="UI/VBoxContainer4"]
margin_top = 88.0
margin_right = 111.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 3 )
text = "Cannon"

[node name="Label2" type="Label" parent="UI/VBoxContainer4"]
margin_top = 123.0
margin_right = 111.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 4 )
text = "10
"
align = 1

[node name="TextureRect" type="TextureRect" parent="UI"]
margin_left = 655.491
margin_top = 537.689
margin_right = 695.491
margin_bottom = 577.689

[node name="Scrapboxes" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 14 )

[node name="Scrapbox8" parent="Scrapboxes" instance=ExtResource( 15 )]
position = Vector2( 41.0019, 72.2745 )

[node name="Scrapbox9" parent="Scrapboxes" instance=ExtResource( 15 )]
position = Vector2( 353.033, 136.905 )

[node name="Scrapbox10" parent="Scrapboxes" instance=ExtResource( 15 )]
position = Vector2( 448.936, 275.199 )

[node name="Scrapbox11" parent="Scrapboxes" instance=ExtResource( 15 )]
position = Vector2( 143.854, 446.851 )

[node name="Scrapbox12" parent="Scrapboxes" instance=ExtResource( 15 )]
position = Vector2( 428.783, 559.433 )

[node name="Scrapbox13" parent="Scrapboxes" instance=ExtResource( 15 )]
position = Vector2( 752.628, 218.908 )

[node name="Scrapbox14" parent="Scrapboxes" instance=ExtResource( 15 )]
position = Vector2( 854.785, 106.327 )

[node name="FlyingHelpText" type="Node" parent="."]
script = ExtResource( 16 )

[node name="NPC" parent="." instance=ExtResource( 17 )]
position = Vector2( 427.389, 139.32 )
rotation = -1.60074

[node name="TimeMachinePoints" type="Node" parent="."]
editor/display_folded = true

[node name="Exit" type="Node2D" parent="TimeMachinePoints"]
position = Vector2( 80.8526, 3.08009 )

[node name="Exit2" type="Node2D" parent="TimeMachinePoints"]
position = Vector2( 713.043, 145.535 )

[node name="Exit3" type="Node2D" parent="TimeMachinePoints"]
position = Vector2( 74.6924, 230.237 )

[node name="Exit4" type="Node2D" parent="TimeMachinePoints"]
position = Vector2( 883.989, 6.93019 )

[node name="Exit5" type="Node2D" parent="TimeMachinePoints"]
position = Vector2( 409.653, 525.927 )

[node name="Drops" type="Node" parent="."]

[node name="TimeMachine" type="KinematicBody2D" parent="."]
editor/display_folded = true
position = Vector2( 997.515, 298.608 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 18 )

[node name="Area2D" type="Area2D" parent="TimeMachine"]
editor/display_folded = true
collision_layer = 3
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TimeMachine/Area2D"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="TimeMachine"]
texture = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TimeMachine"]
shape = SubResource( 6 )

[node name="PSpawn" type="Node2D" parent="."]
position = Vector2( 1014.3, 416.911 )
script = ExtResource( 20 )

[node name="RalphPath" type="Path2D" parent="."]
curve = SubResource( 7 )
[connection signal="pressed" from="UI/VBoxContainer2/TextureButton" to="UI/VBoxContainer2/TextureButton" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="UI/VBoxContainer3/TextureButton" to="UI/VBoxContainer3/TextureButton" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="UI/VBoxContainer4/TextureButton" to="UI/VBoxContainer4/TextureButton" method="_on_TextureButton_pressed"]
[connection signal="body_entered" from="TimeMachine/Area2D" to="TimeMachine" method="_on_TimeMachineArea_body_entered"]
